fix: background image collapses

--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -326,10 +326,14 @@ footer .center .row .link :hover {
   margin-top: 76px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap: 0px;
   position: relative;
+  background: url("../../assets/images/hero_bgd.svg") no-repeat;
+  background-size: 100%;
+  aspect-ratio: 1448/1438;
+  width: 100%;
 }
 .section1 .hero_bg {
   position: absolute;
@@ -364,45 +368,15 @@ footer .center .row .link :hover {
   align-items: center;
   gap: 100px;
 }
-.section1 .stats {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 100px;
-  margin-top: 800px;
-  width: 1120px;
-  max-width: 100vw;
-  padding: 4rem 0;
-  text-align: center;
-}
-.section1 .stats .stats-bg {
-  position: absolute;
-}
-.section1 .stats p {
-  margin: 0;
-}
-.section1 .stats .data {
-  color: #ffffff;
-  font-size: 2rem;
-  margin-bottom: 0.25rem;
-  font-family: "Avenir LT Std", sans-serif;
-  font-weight: 700;
-  line-height: 100%;
-}
-.section1 .stats .desc {
-  font-family: "DM Sans", sans-serif;
-  font-size: 1rem;
-  color: rgba(255, 255, 255, 0.8);
-  text-transform: uppercase;
-  font-weight: 400;
-}
 
 .part2 {
   position: relative;
   overflow-x: clip;
-  margin-bottom: 14rem;
+  padding-bottom: 14rem;
+  background-color: rgba(10, 8, 45, 0.5);
+  mix-blend-mode: normal;
+  box-shadow: 0px -4px 40px rgba(255, 255, 255, 0.2);
+  border-radius: 100%;
 }
 .part2 .cards {
   width: 80%;
@@ -577,6 +551,52 @@ footer .center .row .link :hover {
   border-radius: 6px;
   padding: 0.5rem 1.5rem;
   font-size: 1.375rem;
+}
+
+.stats-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+}
+
+.stats {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+  width: 77%;
+  padding: 5rem 0;
+  text-align: center;
+  background: url("../../assets/images/stats.svg") no-repeat;
+  background-size: cover;
+  aspect-ratio: 1120/186;
+  margin-bottom: 160px;
+}
+.stats .stats-bg {
+  position: absolute;
+}
+.stats p {
+  margin: 0;
+}
+.stats .data {
+  color: #ffffff;
+  font-size: 2rem;
+  margin-bottom: 0.25rem;
+  font-family: "Avenir LT Std", sans-serif;
+  font-weight: 700;
+  line-height: 100%;
+}
+.stats .desc {
+  font-family: "DM Sans", sans-serif;
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.8);
+  text-transform: uppercase;
+  font-weight: 400;
 }
 
 /*# sourceMappingURL=index.css.map */
