--- a/styles/scss/layout/_section1.scss
+++ b/styles/scss/layout/_section1.scss
@@ -1,7 +1,11 @@
 .section1 {
   margin-top: 76px;
-  @include flex(column, center, center);
+  @include flex(column, flex-start, center);
   position: relative;
+  background: url("../../assets/images/hero_bgd.svg") no-repeat;
+  background-size: 100%;
+  aspect-ratio: 1448 / 1438;
+  width: 100%;
 
   // .bg_ellipses {
   //   position: absolute;
@@ -65,49 +69,6 @@
   //   // padding: 1px;
   //   // background-color: white;
 
-  .stats {
-    position: relative;
-    @include flex(row, center, center, 100);
-    margin-top: 800px;
-    width: 1120px;
-    max-width: 100vw;
-    padding: 4rem 0;
-    // background: url(.png),
-    //   radial-gradient(
-    //     90.16% 143.01% at 15.32% 21.04%,
-    //     rgba(189, 35, 182, 0.2) 0%,
-    //     rgba(26, 121, 185, 0.0447917) 77.08%,
-    //     rgba(0, 17, 165, 0) 100%
-    //   );
-    // opacity: 0.7;
-    // filter: drop-shadow(2px 16px 19px rgba(0, 0, 0, 0.09));
-    // border-radius: 8px;
-    // border: 1px solid grey;
-    text-align: center;
-
-    .stats-bg {
-      position: absolute;
-    }
-
-    p {
-      margin: 0;
-    }
-
-    .data {
-      color: $jedi-white;
-      font-size: 2rem;
-      margin-bottom: 0.25rem;
-      font-family: $font-family-primary;
-      font-weight: 700;
-      line-height: 100%;
-    }
-    .desc {
-      font-family: $font-family-secondary;
-      font-size: 1rem;
-      color: $jedi-desc-text;
-      text-transform: uppercase;
-      font-weight: 400;
-    }
-  }
+  
   // }
 }
